--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ CMakeFiles
 CMakeScripts
 Testing
 Makefile
-cmake-debug-debug
+cmake-build-debug
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
